--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 kotlin.code.style=official
-kotlin_version=1.3.31
-junitVersion=5.4.2
+kotlin_version=1.3.61
+junitVersion=5.6.0
+gradlePluginPublishVersion=0.10.1
+jfrogBintrayVersion=1.8.4
+dokkaVersion=0.10.1
+nemerosaVersion=2.11.0
