--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 kotlin.code.style=official
-kotlin_version=1.3.72
+kotlin_version=1.4.0
 junitVersion=5.6.0
+nodePluginVersion=2.2.4
 gradlePluginPublishVersion=0.12.0
 jfrogBintrayVersion=1.8.4
 dokkaVersion=0.10.1
